Add products section

--- a/css/style.css
+++ b/css/style.css
@@ -1706,7 +1706,7 @@ body::before {
   padding: 35px 0;
 }
 .roles__title {
-  padding: 170px 0 56px;
+  padding: 120px 0 56px;
   font-size: 64px;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
@@ -1758,7 +1758,7 @@ body::before {
   padding: 35px 0 120px;
 }
 .partners-contacts__title {
-  padding: 170px 0 56px;
+  padding: 120px 0 56px;
   font-size: 64px;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
@@ -1994,11 +1994,80 @@ body::before {
   line-height: 30px;
 }
 
+.products__inner {
+  padding: 35px 0;
+}
+.products__title {
+  padding: 120px 0 56px;
+  font-size: 64px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+}
+@media (max-width: 1199px) {
+  .products__title {
+    padding: 80px 0 48px;
+    font-size: 60px;
+  }
+}
+
+.chess {
+  display: grid;
+  grid-template-columns: 28.6% 1fr 23%;
+  grid-template-rows: auto auto 1fr;
+  gap: 24px;
+}
+.chess img {
+  width: 100%;
+  border-radius: 8px;
+}
+.chess__subtitle {
+  grid-column: 1 / 3;
+  font-size: 36px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+}
+@media (max-width: 900px) {
+  .chess__subtitle {
+    font-size: 24px;
+  }
+}
+.chess__subtitle a {
+  padding: 24px 0;
+}
+.chess__img1 {
+  grid-column: 1 / 3;
+  grid-row: 2 / 4;
+}
+.chess__img4 {
+  grid-column: 3 / 4;
+  grid-row: 1 / 3;
+}
+.chess__info1 span {
+  display: block;
+  margin-top: 12px;
+  text-align: right;
+}
+.chess__info2 {
+  grid-column: 1 / 2;
+  grid-row: 4 / 5;
+}
+.chess__img3 {
+  grid-column: 2 / 4;
+  grid-row: 4 / 6;
+}
+.chess__img5 {
+  grid-column: 1 / 2;
+  grid-row: 5 / 7;
+}
+.chess__info3 {
+  grid-column: 2 / 4;
+}
+
 .contacts__inner {
   padding: 35px 0 120px;
 }
 .contacts__title {
-  padding: 170px 0 56px;
+  padding: 120px 0 56px;
   font-size: 64px;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
@@ -2127,6 +2196,37 @@ body::before {
 
   .main__inner {
     padding: 35px 0;
+  }
+
+  .chess {
+    grid-template-columns: 1fr 40%;
+    grid-template-rows: auto auto auto auto 1fr;
+  }
+  .chess__img1 {
+    grid-row: 2 / 3;
+  }
+  .chess__img5 {
+    grid-column: 2 / 3;
+    grid-row: 3 / 5;
+  }
+  .chess__info1 {
+    grid-column: 2 / 3;
+    grid-row: 5 / 6;
+  }
+  .chess__info2 {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+  }
+  .chess__img4 {
+    grid-column: 1 / 2;
+    grid-row: 4 / 6;
+  }
+  .chess__img3 {
+    grid-column: 1 / 3;
+    grid-row: 6 / 7;
+  }
+  .chess__info3 {
+    grid-column: 1 / 3;
   }
 }
 @media (max-width: 900px) {
@@ -2292,5 +2392,11 @@ body::before {
 
   .promo__item {
     width: 100%;
+  }
+
+  .chess {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
   }
 }
