--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -39,6 +39,36 @@
 			padding: 35px 0;
 		}
 	}
+	.chess {
+		grid-template-columns: 1fr 40%;
+		grid-template-rows: auto auto auto auto 1fr;
+		&__img1 {
+			grid-row: 2 / 3;
+		}
+		&__img5 {
+			grid-column: 2 / 3;
+			grid-row: 3 / 5;
+		}
+		&__info1 {
+			grid-column: 2 / 3;
+			grid-row: 5 / 6;
+		}
+		&__info2 {
+			grid-column: 1 / 2;
+			grid-row: 3 / 4;
+		}
+		&__img4 {
+			grid-column: 1 / 2;
+			grid-row: 4 / 6;
+		}
+		&__img3 {
+			grid-column: 1 / 3;
+			grid-row: 6 / 7;
+		}
+		&__info3 {
+			grid-column: 1 / 3;
+		}
+	}
 }
 
 @media (max-width: 900px) {
@@ -220,5 +250,10 @@
 		&__item {
 			width: 100%;
 		}
+	}
+	.chess {
+		display: flex;
+		flex-direction: column;
+		gap: $gap;
 	}
 }
