--- a/scss/style.scss
+++ b/scss/style.scss
@@ -175,7 +175,7 @@
 	border-top: 2px solid $shady-main-color;
 	&__inner {
 		display: flex;
-		padding: 160px 0 120px;
+		padding: 120px 0 120px;
 		flex-wrap: wrap;
 		gap: 9px 40px;
 		align-items: center;
@@ -268,6 +268,63 @@
 		&-text {
 			line-height: 30px;
 		}
+	}
+}
+
+.products {
+	&__inner {
+		padding: 35px 0;
+	}
+	&__title {
+		@include section-title;
+	}
+}
+
+.chess {
+	display: grid;
+	grid-template-columns: 28.6% 1fr 23%;
+	grid-template-rows: auto auto 1fr;
+	gap: $gap;
+	img {
+		width: 100%;
+		border-radius: 8px;
+	}
+	&__subtitle {
+		grid-column: 1 / 3;
+		@include section-subtitle;
+		a {
+			padding: $gap 0;
+		}
+	}
+	&__img1 {
+		grid-column: 1 / 3;
+		grid-row: 2 / 4;
+	}
+	&__img4 {
+		grid-column: 3 / 4;
+		grid-row: 1 / 3;
+	}
+	&__info1 {
+		span {
+			display: block;
+			margin-top: 12px;
+			text-align: right;
+		}
+	}
+	&__info2 {
+		grid-column: 1 / 2;
+		grid-row: 4 / 5;
+	}
+	&__img3 {
+		grid-column: 2 / 4;
+		grid-row: 4 / 6;
+	}
+	&__img5 {
+		grid-column: 1 / 2;
+		grid-row: 5 / 7;
+	}
+	&__info3 {
+		grid-column: 2 / 4;
 	}
 }
 //--- main page end ---//
