--- a/scss/style.scss
+++ b/scss/style.scss
@@ -329,6 +329,32 @@
 }
 //--- main page end ---//
 
+//--- ufo page start ---//
+.ufo {
+	&__inner {
+		padding: 35px 0;
+		text-align: center;
+	}
+	&__img {
+		margin-top: $gap;
+		svg {
+			width: 300px;
+			height: 300px;
+		}
+	}
+	&__subtitle {
+		@include section-subtitle;
+	}
+	&__link {
+		margin: $gap 0;
+		padding: 0 $gap;
+		@include button;
+		width: auto;
+		display: inline-block;
+	}
+}
+//--- ufo page end ---//
+
 //--- contacts page start ---//
 .contacts {
 	&__inner {
