--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,5 +8,6 @@ $background-color: rgba(238, 237, 228, 0.02);
 $white: #fff;
 $black: #000;
 
+$half-gap: 12px;
 $gap: 24px;
-$step: 36px;
+$big-gap: 36px;
