--- a/scss/style.scss
+++ b/scss/style.scss
@@ -255,7 +255,7 @@
 		&-top {
 			display: flex;
 			min-height: 124px;
-			margin-bottom: $step;
+			margin-bottom: $big-gap;
 		}
 		svg {
 			flex: 0 0 64px;
@@ -354,6 +354,85 @@
 	}
 }
 //--- ufo page end ---//
+
+//--- clients page start ---//
+.clients {
+	&__inner {
+		padding: 35px 0;
+	}
+	&__title {
+		@include section-title;
+	}
+	&__link {
+		margin: $big-gap auto $gap;
+		padding: 0 $gap;
+		@include button;
+		width: 160px;
+	}
+}
+
+.clients-products {
+	text-align: center;
+	&__subtitle {
+		margin: $gap 0 $big-gap;
+		@include section-subtitle;
+	}
+	&__info {
+		max-width: 900px;
+		margin: 0 auto;
+		@include section-info;
+	}
+	&__items {
+		display: flex;
+		padding-bottom: $gap;
+		flex-wrap: wrap;
+		justify-content: center;
+		gap: $gap;
+	}
+}
+
+.clients-product {
+	width: calc(33.3% - 16px);
+	&__inner {
+		display: flex;
+		flex-direction: column;
+		height: 100%;
+	}
+	&__img {
+		svg {
+			width: 64px;
+			height: 64px;
+			margin-bottom: $half-gap;
+		}
+	}
+	&__title {
+		margin-bottom: $big-gap;
+		@include section-subtitle;
+		font-size: 33px;
+		min-height: 75px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+	&__info {
+		flex-grow: 1;
+		margin-bottom: $big-gap;
+	}
+	&__price {
+		@include section-info;
+		margin-bottom: $gap;
+		&::before {
+			content: 'от';
+			font-size: 20px;
+			margin-right: 7px;
+		}
+		&::after {
+			content: '\20BD';
+			margin-left: 5px;
+		}
+	}
+}
+//--- clients page end ---//
 
 //--- contacts page start ---//
 .contacts {
