--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -113,6 +113,9 @@ body {
 @mixin section-subtitle {
 	font-size: 36px;
 	@include title-font;
+	@media (max-width: 1199px) {
+		font-size: 30px;
+	}
 	@media (max-width: 900px) {
 		font-size: 24px;
 	}
@@ -142,7 +145,7 @@ body {
 }
 
 @mixin section-info {
-	margin-bottom: $step;
+	margin-bottom: $big-gap;
 	font-size: 29px;
 	line-height: 37px;
 }
