--- a/scss/style.scss
+++ b/scss/style.scss
@@ -327,6 +327,78 @@
 		grid-column: 2 / 4;
 	}
 }
+
+.command {
+	&__inner {
+		padding: $big-gap 0;
+	}
+	&__title {
+		@include section-liquid-title;
+	}
+	&__slider {
+		margin-bottom: $gap;
+	}
+}
+
+.dev {
+	&__inner {
+		display: grid;
+		grid-template-columns: 275px 1fr;
+		gap: $gap;
+	}
+	&__profile {
+		grid-column: 1 / 2;
+		grid-row: 1 / 2;
+	}
+	&__img {
+		width: 275px;
+		margin-bottom: $half-gap;
+	}
+	&__name {
+		min-height: 46px;
+	}
+	&__info {
+		grid-column: 2 / 3;
+		grid-row: 1 / 3;
+		display: flex;
+		flex-direction: column;
+		padding: $half-gap;
+		@include section-info;
+		margin: 0;
+		a {
+			margin-top: $big-gap;
+			align-self: flex-end;
+			border-bottom: 1px solid;
+		}
+	}
+	&__controls {
+		grid-column: 1 / 2;
+		grid-row: 2 / 3;
+		display: flex;
+		align-items: center;
+		&-divider {
+			flex-grow: 1;
+			margin: 0 8px;
+			border-bottom: 1px solid $shady-main-color;
+		}
+		&-info {
+			margin-top: -7px;
+		}
+	}
+	&__left-btn,
+	&__right-btn {
+		@include element-decor;
+		width: 40px;
+		height: 40px;
+		text-align: center;
+		line-height: 38px;
+		border-width: 1px;
+		cursor: pointer;
+	}
+	&__left-btn {
+		margin-right: 8px;
+	}
+}
 //--- main page end ---//
 
 //--- ufo page start ---//
