--- a/css/style.css
+++ b/css/style.css
@@ -2084,6 +2084,92 @@ body::before {
   grid-column: 2 / 4;
 }
 
+.command__inner {
+  padding: 36px 0;
+}
+.command__title {
+  padding: 170px 0 56px;
+  font-size: 64px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+}
+@media (max-width: 1199px) {
+  .command__title {
+    padding: 80px 0 48px;
+    font-size: 60px;
+  }
+}
+@media (max-width: 600px) {
+  .command__title {
+    font-size: 40px;
+  }
+}
+.command__slider {
+  margin-bottom: 24px;
+}
+
+.dev__inner {
+  display: grid;
+  grid-template-columns: 275px 1fr;
+  gap: 24px;
+}
+.dev__profile {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+.dev__img {
+  width: 275px;
+  margin-bottom: 12px;
+}
+.dev__name {
+  min-height: 46px;
+}
+.dev__info {
+  grid-column: 2 / 3;
+  grid-row: 1 / 3;
+  display: flex;
+  flex-direction: column;
+  padding: 12px;
+  margin-bottom: 36px;
+  font-size: 29px;
+  line-height: 37px;
+  margin: 0;
+}
+.dev__info a {
+  margin-top: 36px;
+  align-self: flex-end;
+  border-bottom: 1px solid;
+}
+.dev__controls {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  display: flex;
+  align-items: center;
+}
+.dev__controls-divider {
+  flex-grow: 1;
+  margin: 0 8px;
+  border-bottom: 1px solid rgba(250, 240, 181, 0.5);
+}
+.dev__controls-info {
+  margin-top: -7px;
+}
+.dev__left-btn, .dev__right-btn {
+  backdrop-filter: blur(6px);
+  background: rgba(238, 237, 228, 0.02);
+  border: 2px solid rgba(250, 240, 181, 0.5);
+  border-radius: 8px;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 38px;
+  border-width: 1px;
+  cursor: pointer;
+}
+.dev__left-btn {
+  margin-right: 8px;
+}
+
 .ufo__inner {
   padding: 35px 0;
   text-align: center;
@@ -2503,6 +2589,17 @@ body::before {
 
   .clients-product {
     width: calc(50% - 12px);
+  }
+
+  .dev__inner {
+    display: flex;
+    flex-direction: column;
+  }
+  .dev__profile {
+    align-self: center;
+  }
+  .dev__controls {
+    padding: 12px;
   }
 }
 @media (max-width: 600px) {
